[tool.poetry]
name = "release-monitoring"
version = "0.1.0"
description = "Check upstream packages version against our own"
authors = ["Bruno Léon <bruno.leon@suse.com>"]
readme = "README.md"
packages = [{include = "release_monitoring"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pyyaml = "^6.0"
lastversion = "^2.4.10"
typing-extensions = ">=4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
